[Swift] Use Platform.h feature defines as compilation conditions https://bugs.webkit.org/show_bug.cgi?id=288691 rdar://problem/145717488
Reviewed by Alexey Proskuryakov.

Swift can and does import C/C++ headers from WTF, however, it imports
macro definitions as constant values. Unlike C, swift's #if expressions
are parsed separately from module imports, and cannot be influenced by
imported code. The way to influence compilation conditions is with -D
arguments, controlled by the SWIFT_ACTIVE_COMPILATION_CONDITIONS build
setting in Xcode.

The result of this is that we've accumulated a handful of redeclarations
of out PlatformEnable.h flags in xcconfigs, which have to be carefully
maintained so that swift compilation matches clang. This change attempts
to fix this duplication and reestablish Platform.h as the source of
truth for WebKit's compile-time feature toggles.

Add a script to WTF that runs clang's preprocessor to generate an
arguments list of enabled features from <wtf/Platform.h>. This is
similar to what WebCore does in DerivedSources.make, however, it extends
WebCore's implementation by being able to solve simple indirection (e.g.
`#define ENABLE_FOO ENABLE_BAR` will look up the value of ENABLE_BAR).

Change the default OTHER_SWIFT_FLAGS xcconfig variable to include this
arguments list as a response file. Swift and Xcode record this as an
input dependency, so incremental changes to Platform.h and the arguments
list will invalidate swift code as well.

Replace some use of SWIFT_ACTIVE_COMPILATION_CONDITIONS with the
corresponding platform flags. I've left WK_ENABLE_SWIFTUI in place,
because that build setting influences other build settings regarding
SwiftUI project bringup.

Swift's compilation conditions have the same semantics as our ENABLE() /
HAVE() macros, where an undeclared macro is implicitly undefined, so
there is no need to come up with a way to make a record of
deliberately-not-defined features.

* Configurations/CommonBase.xcconfig:
* Configurati

--- a/Configurations/CommonBase.xcconfig
+++ b/Configurations/CommonBase.xcconfig
@@ -53,8 +53,7 @@ OTHER_CFLAGS = $(inherited) $(WK_COMMON_OTHER_CFLAGS);
 WK_COMMON_OTHER_CPLUSPLUSFLAGS = $(WK_LIBCPP_ASSERTIONS_CFLAGS) $(WK_SANITIZER_OTHER_CPLUSPLUSFLAGS);
 OTHER_CPLUSPLUSFLAGS = $(inherited) $(WK_COMMON_OTHER_CPLUSPLUSFLAGS);
 
-WK_COMMON_OTHER_SWIFT_FLAGS = $(WK_COMMON_OTHER_SWIFT_FLAGS_$(USE_INTERNAL_SDK));
-WK_COMMON_OTHER_SWIFT_FLAGS_YES = -DUSE_APPLE_INTERNAL_SDK;
+WK_COMMON_OTHER_SWIFT_FLAGS = @$(WTF_BUILD_SCRIPTS_DIR)/platform-enabled-swift-args.$(arch).resp;
 OTHER_SWIFT_FLAGS = $(inherited) $(WK_COMMON_OTHER_SWIFT_FLAGS);
 
 WK_COMMON_OTHER_LDFLAGS = $(WK_SANITIZER_OTHER_LDFLAGS);
