--- a/Configurations/CommonBase.xcconfig
+++ b/Configurations/CommonBase.xcconfig
@@ -53,7 +53,8 @@ OTHER_CFLAGS = $(inherited) $(WK_COMMON_OTHER_CFLAGS);
 WK_COMMON_OTHER_CPLUSPLUSFLAGS = $(WK_LIBCPP_ASSERTIONS_CFLAGS) $(WK_SANITIZER_OTHER_CPLUSPLUSFLAGS);
 OTHER_CPLUSPLUSFLAGS = $(inherited) $(WK_COMMON_OTHER_CPLUSPLUSFLAGS);
 
-WK_COMMON_OTHER_SWIFT_FLAGS = @$(WTF_BUILD_SCRIPTS_DIR)/platform-enabled-swift-args.$(arch).resp;
+WK_COMMON_OTHER_SWIFT_FLAGS = $(WK_COMMON_OTHER_SWIFT_FLAGS_$(USE_INTERNAL_SDK));
+WK_COMMON_OTHER_SWIFT_FLAGS_YES = -DUSE_APPLE_INTERNAL_SDK;
 OTHER_SWIFT_FLAGS = $(inherited) $(WK_COMMON_OTHER_SWIFT_FLAGS);
 
 WK_COMMON_OTHER_LDFLAGS = $(WK_SANITIZER_OTHER_LDFLAGS);
