REGRESSION (288504@main): If Remote Snapshotting is enabled and transformX is applied, text is flipped when exporting a PDF https://bugs.webkit.org/show_bug.cgi?id=289187 rdar://146340218
Reviewed by Tim Horton.

Turn off the experimental feature `RemoteSnapshottingEnabled` off by default till
this bug is investigated. This feature will be enabled by default later.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:

Canonical link: https://commits.webkit.org/291733@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -6127,16 +6127,16 @@ RemotePlaybackEnabled:
 
 RemoteSnapshottingEnabled:
    type: bool
-   status: stable
+   status: testable
    category: media
    humanReadableName: "Remote Snapshotting"
    defaultValue:
      WebKitLegacy:
        default: false
      WebKit:
-       default: true
+       default: false
      WebCore:
-       default: true
+       default: false
 
 RemoveBackgroundEnabled:
   type: bool
