--- a/Source/WebKit/NetworkProcess/mac/com.apple.WebKit.NetworkProcess.sb.in
+++ b/Source/WebKit/NetworkProcess/mac/com.apple.WebKit.NetworkProcess.sb.in
@@ -597,6 +597,9 @@
     (when (defined? 'SYS_crossarch_trap)
         (deny syscall-unix (with no-report) (syscall-number
             SYS_crossarch_trap)))
+    (when (defined? 'SYS___nexus_set_opt)
+        (deny syscall-unix (with no-report) (syscall-number
+            SYS___nexus_set_opt)))
     (allow syscall-unix (syscall-number
         SYS___channel_get_info
         SYS___channel_open
