[iOS-18-Simulator-Build-EWS] clang importer creation failed - needs to be rebuilt: signature mismatch https://bugs.webkit.org/show_bug.cgi?id=289313 rdar://146140828
Reviewed by Jonathan Bedard.

Fix periodic build failures on iOS bots by enabling Swift explicitly
built modules. There are some known issues on Xcode 15, so disable it
for the downlevel macOS build that uses that release.

* Configurations/CommonBase.xcconfig:

Canonical link: https://commits.webkit.org/291797@main

--- a/Configurations/CommonBase.xcconfig
+++ b/Configurations/CommonBase.xcconfig
@@ -56,6 +56,10 @@ OTHER_CPLUSPLUSFLAGS = $(inherited) $(WK_COMMON_OTHER_CPLUSPLUSFLAGS);
 WK_COMMON_OTHER_SWIFT_FLAGS = @$(WTF_BUILD_SCRIPTS_DIR)/platform-enabled-swift-args.$(arch).resp;
 OTHER_SWIFT_FLAGS = $(inherited) $(WK_COMMON_OTHER_SWIFT_FLAGS);
 
+_EXPERIMENTAL_SWIFT_EXPLICIT_MODULES = $(WK_DEFAULT_SWIFT_ENABLE_EXPLICIT_MODULES);
+WK_DEFAULT_SWIFT_ENABLE_EXPLICIT_MODULES = YES;
+WK_DEFAULT_SWIFT_ENABLE_EXPLICIT_MODULES[sdk=macosx14*] = ;
+
 WK_COMMON_OTHER_LDFLAGS = $(WK_SANITIZER_OTHER_LDFLAGS);
 OTHER_LDFLAGS = $(inherited) $(WK_COMMON_OTHER_LDFLAGS);
 
