[macOS] Silence some sandbox violations https://bugs.webkit.org/show_bug.cgi?id=289351 rdar://146493352
Reviewed by Sihui Liu.

* Source/WebKit/NetworkProcess/mac/com.apple.WebKit.NetworkProcess.sb.in:
* Source/WebKit/WebProcess/com.apple.WebProcess.sb.in:

Canonical link: https://commits.webkit.org/291800@main

--- a/Source/WebKit/NetworkProcess/mac/com.apple.WebKit.NetworkProcess.sb.in
+++ b/Source/WebKit/NetworkProcess/mac/com.apple.WebKit.NetworkProcess.sb.in
@@ -71,7 +71,7 @@
 
 (allow socket-ioctl)
 
-(allow socket-option-set (with report))
+(allow socket-option-set)
 (allow socket-option-get (with telemetry) (with report))
 
 (allow socket-option-set
