--- a/Source/WebKit/Shared/WebPageCreationParameters.serialization.in
+++ b/Source/WebKit/Shared/WebPageCreationParameters.serialization.in
@@ -274,6 +274,8 @@ enum class WebCore::UserInterfaceLayoutDirection : bool;
 #if PLATFORM(COCOA)
     String presentingApplicationBundleIdentifier;
 #endif
+
+    bool hasReceivedAXRequestInUIProcess;
 }
 
 [Nested] struct WebKit::RemotePageParameters {
