Add networking support for InstallEvent.addRoutes rdar://144085570 https://bugs.webkit.org/show_bug.cgi?id=286924
Reviewed by Chris Dumez.

We store the routes in SWServerWorker and validate them.
We add checks in WebSWClientConnection to use routes in case of fetch event.
We only support fetch or networking for now, and not going to the cache storage.

We implement a better handling of maximum service worker route count check by limiting the total number of conditions.
We also fix an error in ServiceWorkerRouteCondition where port and pathname were interchanged.

Covered by added tests and rebased tests.

* LayoutTests/TestExpectations:
* LayoutTests/http/wpt/service-workers/service-worker-add-routes-too-late-worker.js: Added.
(onmessage.async e):
* LayoutTests/http/wpt/service-workers/service-worker-add-routes-too-late.js: Added.
(onmessage.async e):
* LayoutTests/http/wpt/service-workers/service-worker-add-routes-worker.js: Added.
(onmessage.e.catch):
* LayoutTests/http/wpt/service-workers/service-worker-routes-expected.txt: Added.
* LayoutTests/http/wpt/service-workers/service-worker-routes.html: Added.
* LayoutTests/http/wpt/service-workers/service-worker-too-many-routes.js: Added.
* LayoutTests/imported/w3c/web-platform-tests/service-workers/service-worker/static-router-mutiple-conditions.https-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/service-workers/service-worker/static-router-request-destination.https-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/service-workers/service-worker/static-router-request-method.https-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/service-workers/service-worker/static-router-subresource.https-expected.txt:
* Source/WebCore/Headers.cmake:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/workers/service/ServiceWorkerRoute.cpp:
(WebCore::computeServiceWorkerRouteConditionCount):
(WebCore::validateServiceWorkerRouteCondition):
(WebCore::validateServiceWorkerRoute):
(Web

--- a/Source/WebKit/NetworkProcess/ServiceWorker/WebSWServerConnection.messages.in
+++ b/Source/WebKit/NetworkProcess/ServiceWorker/WebSWServerConnection.messages.in
@@ -73,6 +73,8 @@ messages -> WebSWServerConnection {
     [EnabledBy=CookieStoreManagerEnabled] RemoveCookieChangeSubscriptions(WebCore::ServiceWorkerRegistrationIdentifier identifier, Vector<WebCore::CookieChangeSubscription> subscriptions) -> (std::optional<WebCore::ExceptionData> result)
     [EnabledBy=CookieStoreManagerEnabled] CookieChangeSubscriptions(WebCore::ServiceWorkerRegistrationIdentifier identifier) -> (Expected<Vector<WebCore::CookieChangeSubscription>, WebCore::ExceptionData> result)
 
+    AddRoutes(WebCore::ServiceWorkerRegistrationIdentifier identifier, Vector<WebCore::ServiceWorkerRoute> subscriptions) -> (Expected<void, WebCore::ExceptionData> result)
+
 #if ENABLE(WEB_PUSH_NOTIFICATIONS)
     GetNotifications(URL registrationURL, String tag) -> (Expected<Vector<WebCore::NotificationData>, WebCore::ExceptionData> result)
 #endif
