Move WebKit utility functions out of XPCSPI.h and rename <https://bugs.webkit.org/show_bug.cgi?id=288984> <rdar://146054630>
Reviewed by Chris Dumez and Geoffrey Garen.

Introduce <wtf/darwin/XPCExtras.h>, move helper functions into this
header, and rename helper functions to match camelCase.

* Source/WTF/WTF.xcodeproj/project.pbxproj:
* Source/WTF/wtf/CMakeLists.txt:
* Source/WTF/wtf/PlatformMac.cmake:
- Update build system files to add XPCExtras.h.
* Source/WTF/wtf/darwin/XPCExtras.h: Add.
(WTF::xpcDictionaryGetData): Add.
(WTF::xpcErrorDescriptionKey): Add.
(WTF::xpcDictionaryGetString): Add.
(WTF::xpcStringGetString): Add.
- Move from XPCSPI.h and rename.
* Source/WTF/wtf/spi/darwin/XPCSPI.h:
(xpc_dictionary_get_data_span): Delete.
(xpcErrorDescriptionKey): Delete.
(xpc_dictionary_get_wtfstring): Delete.
(xpc_string_get_wtfstring): Delete.
- Move to XPCExtras.h and rename.

* Source/WebKit/NetworkProcess/Authentication/cocoa/AuthenticationManagerCocoa.mm:
(WebKit::AuthenticationManager::initializeConnection):
* Source/WebKit/NetworkProcess/Notifications/Cocoa/WebPushDaemonConnectionCocoa.mm:
(WebKit::WebPushD::Connection::performSendWithAsyncReplyWithoutUsingIPCConnection const):
* Source/WebKit/NetworkProcess/PrivateClickMeasurement/cocoa/PrivateClickMeasurementConnectionCocoa.mm:
(WebKit::PCM::Connection::connectionReceivedEvent):
* Source/WebKit/NetworkProcess/cocoa/LaunchServicesDatabaseObserver.mm:
(WebKit::LaunchServicesDatabaseObserver::handleEvent):
* Source/WebKit/Platform/IPC/DaemonConnection.h:
* Source/WebKit/Platform/IPC/cocoa/DaemonConnectionCocoa.mm:
(WebKit::Daemon::ConnectionToMachService<Traits>::sendWithReply const):
* Source/WebKit/Platform/cocoa/MediaCapability.mm:
(WebKit::MediaCapability::environmentIdentifier const):
* Source/WebKit/Platform/cocoa/XPCUtilities.h:
* Source/WebKit/Platform/cocoa/XPCUtilities.mm:
(WebKit::handleXPCExitMessage):
* Source/WebKit/Shared/Cocoa/XPCEndpoint.h:
* Source/WebKit/Shared/EntryPointUtilities/Cocoa/Daem

--- a/Source/WTF/wtf/CMakeLists.txt
+++ b/Source/WTF/wtf/CMakeLists.txt
@@ -691,6 +691,7 @@ elseif (APPLE)
 
         darwin/OSLogPrintStream.h
         darwin/WeakLinking.h
+        darwin/XPCExtras.h
 
         spi/cf/CFBundleSPI.h
         spi/cf/CFStringSPI.h
