--- a/Source/WebKit/GPUProcess/graphics/WebGPU/RemoteBuffer.messages.in
+++ b/Source/WebKit/GPUProcess/graphics/WebGPU/RemoteBuffer.messages.in
@@ -32,6 +32,7 @@ messages -> RemoteBuffer Stream {
     void GetMappedRange(WebCore::WebGPU::Size64 offset, std::optional<WebCore::WebGPU::Size64> size) -> (std::optional<Vector<uint8_t>> data) Synchronous
     void MapAsync(WebCore::WebGPU::MapModeFlags mapModeFlags, WebCore::WebGPU::Size64 offset, std::optional<WebCore::WebGPU::Size64> size) -> (bool success)
     void Copy(std::optional<WebCore::SharedMemory::Handle> data, size_t offset) -> (bool success) NotStreamEncodable
+    void CopyWithCopy(Vector<uint8_t> data, size_t offset)
     void Unmap()
     void Destroy()
     void Destruct()
