--- a/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
+++ b/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
@@ -161,19 +161,6 @@
     (allow IOKIT_OPEN_SERVICE
         (iokit-connection "IOAccelerator"))
 
-    (if (and (equal? (param "ENABLE_SANDBOX_MESSAGE_FILTER") "YES") (not (equal? (param "CPU") "arm64")))
-        (allow IOKIT_OPEN_USER_CLIENT
-            (iokit-connection "IOAccelerator")
-            (apply-message-filter
-                (allow (with report) (with telemetry)
-                    iokit-async-external-method
-                    iokit-external-method
-                    iokit-external-trap)
-                (allow iokit-external-method
-                    (iokit-method-number 1 4 9 11 12 20 257))
-                (allow iokit-async-external-method
-                    (iokit-method-number 0)))))
-
     (if (equal? (param "ENABLE_SANDBOX_MESSAGE_FILTER") "YES")
         (allow IOKIT_OPEN_USER_CLIENT
             (iokit-connection "IOAccelerator")
@@ -182,6 +169,11 @@
                     iokit-async-external-method
                     iokit-external-method
                     iokit-external-trap)
+                (when (not (equal? (param "CPU") "arm64"))
+                    (allow iokit-external-method
+                        (iokit-method-number 1 4 9 11 12 20 257))
+                    (allow iokit-async-external-method
+                        (iokit-method-number 0)))
                 (allow iokit-external-method
                     (iokit-method-number 0 2 5 6 7 8 9 10 14 15 16 17 28 29 30 31 39 40 256 258 261 263 264))
                 (allow iokit-external-trap
