REGRESSION (291262@main): [ macOS Debug wk2 ] ipc/serialized-type-info.html is a consistent failure https://bugs.webkit.org/show_bug.cgi?id=289098 rdar://146127677
Unreviewed.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebKit/NetworkProcess/NetworkResourceLoadParameters.serialization.in:
* Source/WebKit/Scripts/webkit/messages.py:
(serialized_identifiers):
(headers_for_type):
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:

Canonical link: https://commits.webkit.org/291905@main

--- a/Source/WebKit/NetworkProcess/NetworkResourceLoadParameters.serialization.in
+++ b/Source/WebKit/NetworkProcess/NetworkResourceLoadParameters.serialization.in
@@ -115,3 +115,5 @@ class WebKit::NetworkResourceLoadParameters : WebKit::NetworkLoadParameters {
     bool linkPreconnectEarlyHintsEnabled;
     bool shouldRecordFrameLoadForStorageAccess;
 };
+
+using WebCore::FetchingWorkerIdentifier = std::variant<std::monostate, WebCore::SharedWorkerIdentifier, WebCore::ServiceWorkerIdentifier>;
