Rename "alternate root" terminology in projects and build configurations https://bugs.webkit.org/show_bug.cgi?id=288218
Reviewed by Elliott Williams.

Deobfuscate "alternate root" and refer to the OS cryptex by name directly, since the
install layout of WebKit into this path is no longer a secret. Make the following renames:

    create-symlink-to-altroot.sh => create-symlink-to-cryptex.sh
    ALTERNATE_ROOT_PATH => CRYPTEX_SYMLINK_PATH
    OUTPUT_ALTERNATE_ROOT_DIR => OUTPUT_CRYPTEX_SYMLINK_DIR
    OUTPUT_ALTERNATE_ROOT_PATH => OUTPUT_CRYPTEX_SYMLINK_PATH
    "Create Symlink to Alt Root Path" script phase => "Create Symlink to Cryptex Path"

* Configurations/WebKitProjectPaths.xcconfig:
* Source/JavaScriptCore/Configurations/JavaScriptCore.xcconfig:
* Source/JavaScriptCore/JavaScriptCore.xcodeproj/project.pbxproj:
* Source/JavaScriptCore/Scripts/create-symlink-to-altroot.sh: Removed.
* Source/JavaScriptCore/Scripts/create-symlink-to-cryptex.sh: Added.
* Source/ThirdParty/libwebrtc/Scripts/create-symlink-to-cryptex.sh: Renamed from Source/ThirdParty/libwebrtc/Scripts/create-symlink-to-altroot.sh.
* Source/ThirdParty/libwebrtc/libwebrtc.xcodeproj/project.pbxproj:
* Source/WebCore/Configurations/WebCore.xcconfig:
* Source/WebCore/Scripts/create-symlink-to-altroot.sh: Removed.
* Source/WebCore/Scripts/create-symlink-to-cryptex.sh: Added.
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebGPU/Configurations/WebGPU.xcconfig:
* Source/WebGPU/Scripts/create-symlink-to-altroot.sh: Removed.
* Source/WebGPU/Scripts/create-symlink-to-cryptex.sh: Added.
* Source/WebGPU/WebGPU.xcodeproj/project.pbxproj:
* Source/WebInspectorUI/Configurations/WebInspectorUIFramework.xcconfig:
* Source/WebInspectorUI/Scripts/create-symlink-to-altroot.sh: Removed.
* Source/WebInspectorUI/Scripts/create-symlink-to-cryptex.sh: Added.
* Source/WebInspectorUI/WebInspectorUI.xcodeproj/project.pbxproj:
* Source/WebKit/Configurations/BaseExtension.xcconfig:
* Source/WebKit/Configurations/WebK

--- a/Configurations/WebKitProjectPaths.xcconfig
+++ b/Configurations/WebKitProjectPaths.xcconfig
@@ -47,7 +47,7 @@ WK_LIBRARY_INSTALL_PATH = $(WK_LIBRARY_INSTALL_PATH_OVERRIDE_$(WK_USE_OVERRIDE_F
 WK_LIBRARY_INSTALL_PATH_OVERRIDE_NO = /usr/local/lib;
 WK_LIBRARY_INSTALL_PATH_OVERRIDE_YES = /usr/local/lib/safari-sdk;
 
-// INSTALL_PATH_PREFIX adds the system content path as a prefix to products' install paths.
+// INSTALL_PATH_PREFIX adds the OS cryptex path as a prefix to products' install paths.
 // Leave it empty when USE_STAGING_INSTALL_PATH is set, as the effective prefix will
 // be baked into WK_OVERRIDE_FRAMEWORKS_DIR via WK_INSTALL_PATH_PREFIX instead.
 INSTALL_PATH_PREFIX = $(INSTALL_PATH_PREFIX_USE_SYSTEM_CONTENT_PATH_$(USE_SYSTEM_CONTENT_PATH)_$(WK_NOT_$(USE_STAGING_INSTALL_PATH)));
