--- a/Source/WebCore/Configurations/WebCore.xcconfig
+++ b/Source/WebCore/Configurations/WebCore.xcconfig
@@ -78,15 +78,15 @@ PRODUCT_NAME = WebCore;
 PRODUCT_BUNDLE_IDENTIFIER = com.apple.$(PRODUCT_NAME:rfc1034identifier);
 UNEXPORTED_SYMBOLS_FILE = Configurations/WebCore.unexp;
 
-ALTERNATE_ROOT_PATH[sdk=iphone*] = $(SYSTEM_LIBRARY_DIR)/PrivateFrameworks;
-ALTERNATE_ROOT_PATH[sdk=macosx*] = $(ALTERNATE_ROOT_PATH_$(WK_USE_ALTERNATE_FRAMEWORKS_DIR));
-ALTERNATE_ROOT_PATH_YES = $(WK_ALTERNATE_FRAMEWORKS_DIR)/$(SYSTEM_LIBRARY_DIR)/PrivateFrameworks;
+CRYPTEX_SYMLINK_PATH[sdk=iphone*] = $(SYSTEM_LIBRARY_DIR)/PrivateFrameworks;
+CRYPTEX_SYMLINK_PATH[sdk=macosx*] = $(CRYPTEX_SYMLINK_PATH_$(WK_USE_ALTERNATE_FRAMEWORKS_DIR));
+CRYPTEX_SYMLINK_PATH_YES = $(WK_ALTERNATE_FRAMEWORKS_DIR)/$(SYSTEM_LIBRARY_DIR)/PrivateFrameworks;
 
-OUTPUT_ALTERNATE_ROOT_PATH[sdk=iphone*] = $(OUTPUT_ALTERNATE_ROOT_PATH_$(USE_SYSTEM_CONTENT_PATH));
-OUTPUT_ALTERNATE_ROOT_PATH_YES[sdk=iphone*] = $(DSTROOT)$(ALTERNATE_ROOT_PATH)/$(FULL_PRODUCT_NAME);
+OUTPUT_CRYPTEX_SYMLINK_PATH[sdk=iphone*] = $(OUTPUT_CRYPTEX_SYMLINK_PATH_$(USE_SYSTEM_CONTENT_PATH));
+OUTPUT_CRYPTEX_SYMLINK_PATH_YES[sdk=iphone*] = $(DSTROOT)$(CRYPTEX_SYMLINK_PATH)/$(FULL_PRODUCT_NAME);
 
-OUTPUT_ALTERNATE_ROOT_PATH[sdk=macosx*] = $(OUTPUT_ALTERNATE_ROOT_PATH_$(USE_SYSTEM_CONTENT_PATH)_$(WK_USE_ALTERNATE_FRAMEWORKS_DIR));
-OUTPUT_ALTERNATE_ROOT_PATH_YES_YES[sdk=macosx*] = $(DSTROOT)$(ALTERNATE_ROOT_PATH)/$(FULL_PRODUCT_NAME);
+OUTPUT_CRYPTEX_SYMLINK_PATH[sdk=macosx*] = $(OUTPUT_CRYPTEX_SYMLINK_PATH_$(USE_SYSTEM_CONTENT_PATH)_$(WK_USE_ALTERNATE_FRAMEWORKS_DIR));
+OUTPUT_CRYPTEX_SYMLINK_PATH_YES_YES[sdk=macosx*] = $(DSTROOT)$(CRYPTEX_SYMLINK_PATH)/$(FULL_PRODUCT_NAME);
 
 // Work around rdar://104435018 on older toolchains.
 CLANG_DEBUG_INFORMATION_LEVEL = $(CLANG_DEBUG_INFORMATION_LEVEL$(WK_MACOS_1400));
