--- a/Source/WebInspectorUI/Configurations/WebInspectorUIFramework.xcconfig
+++ b/Source/WebInspectorUI/Configurations/WebInspectorUIFramework.xcconfig
@@ -20,10 +20,10 @@ DYLIB_INSTALL_NAME_BASE = $(SYSTEM_LIBRARY_DIR)/PrivateFrameworks;
 PRODUCT_NAME = WebInspectorUI;
 PRODUCT_BUNDLE_IDENTIFIER = com.apple.$(PRODUCT_NAME:rfc1034identifier);
 
-ALTERNATE_ROOT_PATH = $(DYLIB_INSTALL_NAME_BASE);
+CRYPTEX_SYMLINK_PATH = $(DYLIB_INSTALL_NAME_BASE);
 
-OUTPUT_ALTERNATE_ROOT_PATH = $(OUTPUT_ALTERNATE_ROOT_PATH_$(USE_SYSTEM_CONTENT_PATH)_$(WK_NOT_$(WK_USE_OVERRIDE_FRAMEWORKS_DIR)));
-OUTPUT_ALTERNATE_ROOT_PATH_YES_YES = $(DSTROOT)$(ALTERNATE_ROOT_PATH)/$(FULL_PRODUCT_NAME);
+OUTPUT_CRYPTEX_SYMLINK_PATH = $(OUTPUT_CRYPTEX_SYMLINK_PATH_$(USE_SYSTEM_CONTENT_PATH)_$(WK_NOT_$(WK_USE_OVERRIDE_FRAMEWORKS_DIR)));
+OUTPUT_CRYPTEX_SYMLINK_PATH_YES_YES = $(DSTROOT)$(CRYPTEX_SYMLINK_PATH)/$(FULL_PRODUCT_NAME);
 
 GCC_DYNAMIC_NO_PIC = NO;
 GCC_PRECOMPILE_PREFIX_HEADER = YES;
