Add a validator for IDBKeyData in IPC message https://bugs.webkit.org/show_bug.cgi?id=289508 rdar://146523477
Reviewed by Per Arne Vollan.

According to spec https://www.w3.org/TR/IndexedDB/#key-construct, a valid key cannot have NaN as value; so a benign
process should not send message with that and we should message check that.

This patch also contains a drive-by fix that ensures `IndexValueStore::removeRecord()` validatea iterator before access.

* Source/WebCore/Modules/indexeddb/IDBKeyData.cpp:
(WebCore::IDBKeyData::isValidValue):
* Source/WebCore/Modules/indexeddb/IDBKeyData.h:
* Source/WebCore/Modules/indexeddb/server/IndexValueStore.cpp:
(WebCore::IDBServer::IndexValueStore::removeRecord):
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:

Canonical link: https://commits.webkit.org/291955@main

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -673,7 +673,7 @@ struct WebCore::IDBDatabaseNameAndVersion {
 
 class WebCore::IDBKeyData {
     bool isPlaceholder()
-    std::variant<std::nullptr_t, WebCore::IDBKeyData::Invalid, Vector<WebCore::IDBKeyData>, String, double, WebCore::IDBKeyData::Date, WebCore::ThreadSafeDataBuffer, WebCore::IDBKeyData::Min, WebCore::IDBKeyData::Max> value()
+    [Validator='WebCore::IDBKeyData::isValidValue(*value)'] std::variant<std::nullptr_t, WebCore::IDBKeyData::Invalid, Vector<WebCore::IDBKeyData>, String, double, WebCore::IDBKeyData::Date, WebCore::ThreadSafeDataBuffer, WebCore::IDBKeyData::Min, WebCore::IDBKeyData::Max> value()
 }
 
 [Nested] struct WebCore::IDBKeyData::Invalid {
