Add about: scheme handler. https://bugs.webkit.org/show_bug.cgi?id=288910 rdar://145910285
Reviewed by Chris Dumez.

Currently about: scheme is handled ad-hoc independently. Add AboutSchemeHandler to support generic way to handle
about: scheme for each platform way.

* Source/WebCore/loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::maybeLoadEmpty):
(WebCore::DocumentLoader::shouldCancelLoadingAboutURL const):
(WebCore::shouldCancelLoadingAboutURL): Deleted.
* Source/WebCore/loader/DocumentLoader.h:
(WebCore::DocumentLoader::isHandledByAboutSchemeHandler const):
(WebCore::DocumentLoader::setIsHandledByAboutSchemeHandler):
* Source/WebCore/loader/FrameLoadRequest.h:
(WebCore::FrameLoadRequest::isHandledByAboutSchemeHandler const):
(WebCore::FrameLoadRequest::setIsHandledByAboutSchemeHandler):
* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::load):
* Source/WebCore/platform/LegacySchemeRegistry.cpp:
(WebCore::LegacySchemeRegistry::registerURLSchemeAsHandledBySchemeHandler):
(WebCore::LegacySchemeRegistry::registerURLSchemeAsCORSEnabled):
* Source/WebKit/Shared/LoadParameters.h:
* Source/WebKit/Shared/LoadParameters.serialization.in:
* Source/WebKit/Sources.txt:
* Source/WebKit/UIProcess/AboutSchemeHandler.cpp: Added.
(WebKit::AboutSchemeHandler::singleton):
(WebKit::AboutSchemeHandler::AboutSchemeHandler):
(WebKit::AboutSchemeHandler::handlerForURL const):
(WebKit::AboutSchemeHandler::platformStartTask):
(WebKit::AboutSchemeHandler::canHandleURL const):
(WebKit::AboutSchemeHandler::platformInitialize):
(WebKit::AboutSchemeHandler::registerHandler):
* Source/WebKit/UIProcess/AboutSchemeHandler.h: Added.
* Source/WebKit/UIProcess/Cocoa/AboutSchemeHandlerCocoa.mm: Added.
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::m_pageForTesting):
(WebKit::WebPageProxy::loadRequestWithNavigationShared):
(WebKit::WebPageProxy::loadSimulatedRequest):
(WebKit::WebPageProxy::receivedNavigationActionPolicyDecision):
(WebKit::WebPageProxy::continueNavigationInNewPr

--- a/Source/WebKit/Shared/LoadParameters.serialization.in
+++ b/Source/WebKit/Shared/LoadParameters.serialization.in
@@ -55,6 +55,7 @@ enum class WebCore::LockBackForwardList : bool;
 #endif
     bool isRequestFromClientOrUserInput;
     bool isPerformingHTTPFallback;
+    bool isHandledByAboutSchemeHandler;
 
     std::optional<OptionSet<WebCore::AdvancedPrivacyProtections>> advancedPrivacyProtections;
 };
