Move CoroutineUtilities to WTF https://bugs.webkit.org/show_bug.cgi?id=289520 rdar://146725359
Reviewed by Abrar Rahman Protyasha.

They are low-level utilities with no dependencies except C++20.
This allows us to share CoroutineHandle.

* Source/WTF/WTF.xcodeproj/project.pbxproj:
* Source/WTF/wtf/CMakeLists.txt:
* Source/WTF/wtf/CoroutineUtilities.h: Renamed from Source/WebKit/Platform/CoroutineUtilities.h.
(WTF::CoroutineHandle::CoroutineHandle):
(WTF::CoroutineHandle::operator=):
(WTF::CoroutineHandle::~CoroutineHandle):
(WTF::CoroutineHandle::handle const):
(WTF::Task::promise_type::get_return_object):
(WTF::Task::promise_type::initial_suspend):
(WTF::Task::promise_type::unhandled_exception):
(WTF::Task::promise_type::return_void):
* Source/WTF/wtf/Forward.h:
* Source/WebKit/Platform/IPC/HandleMessage.h:
(IPC::callMemberFunctionCoroutine):
(IPC::callMemberFunctionCoroutineVoid):
* Source/WebKit/UIProcess/WebFullScreenManagerProxy.cpp:
* Source/WebKit/UIProcess/WebFullScreenManagerProxy.h:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/WebKit.xcodeproj/project.pbxproj:
* Tools/TestWebKitAPI/CoroutineUtilities.h:
(TestWebKitAPI::ConnectionTask::promise_type::get_return_object):
(TestWebKitAPI::CoroutineHandle::CoroutineHandle): Deleted.
(TestWebKitAPI::CoroutineHandle::~CoroutineHandle): Deleted.
(TestWebKitAPI::Task::promise_type::get_return_object): Deleted.
(TestWebKitAPI::Task::promise_type::initial_suspend): Deleted.
(TestWebKitAPI::Task::promise_type::unhandled_exception): Deleted.
(TestWebKitAPI::Task::promise_type::return_void): Deleted.
* Tools/TestWebKitAPI/Tests/WebKitCocoa/CookieAcceptPolicy.mm:
(TEST(WKHTTPCookieStore, CookiePolicy)):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/LoadAlternateHTMLString.mm:
(TEST(WebKit, LoadMoreThan4GB)):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/Navigation.mm:
(setupWebViewForPrivateTokenTests):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/NetworkProcess.mm:
(TEST(_WKDataTas

--- a/Source/WTF/wtf/CMakeLists.txt
+++ b/Source/WTF/wtf/CMakeLists.txt
@@ -59,6 +59,7 @@ set(WTF_PUBLIC_HEADERS
     Condition.h
     ContinuousApproximateTime.h
     ContinuousTime.h
+    CoroutineUtilities.h
     CountingLock.h
     CrossThreadCopier.h
     CrossThreadQueue.h
