FileSystem::openFile() should return a FileHandle https://bugs.webkit.org/show_bug.cgi?id=289509
Reviewed by Geoffrey Garen.

FileSystem::openFile() should return a FileHandle instead of a PlatformFileHandle, FileHandle being a
RAII wrapper to make sure we never forget to close file descriptors.

In a follow-up, I will look into cleaning up FileSystem.h, now that some of the API is only needed
by FileHandle.

* Source/JavaScriptCore/API/JSScript.mm:
(-[JSScript readCache]):
* Source/JavaScriptCore/jsc.cpp:
(JSC_DEFINE_HOST_FUNCTION):
* Source/JavaScriptCore/runtime/JSGlobalObject.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):
* Source/JavaScriptCore/wasm/WasmStreamingParser.cpp:
(JSC::Wasm::dumpWasmSource):
* Source/WTF/WTF.xcodeproj/project.pbxproj:
* Source/WTF/wtf/CMakeLists.txt:
* Source/WTF/wtf/FileHandle.cpp: Added.
(WTF::FileSystemImpl::FileHandle::FileHandle):
(WTF::FileSystemImpl::FileHandle::~FileHandle):
(WTF::FileSystemImpl::FileHandle::operator=):
(WTF::FileSystemImpl::FileHandle::readAll):
(WTF::FileSystemImpl::FileHandle::read):
(WTF::FileSystemImpl::FileHandle::write):
(WTF::FileSystemImpl::FileHandle::lock):
(WTF::FileSystemImpl::FileHandle::truncate):
(WTF::FileSystemImpl::FileHandle::closeIfNecessary):
(WTF::FileSystemImpl::FileHandle::size):
(WTF::FileSystemImpl::FileHandle::seek):
(WTF::FileSystemImpl::FileHandle::flush):
(WTF::FileSystemImpl::FileHandle::id):
* Source/WTF/wtf/FileHandle.h: Added.
(WTF::FileSystemImpl::FileHandle::FileHandle):
(WTF::FileSystemImpl::FileHandle::platformHandle const):
(WTF::FileSystemImpl::FileHandle::isValid const):
(WTF::FileSystemImpl::FileHandle::operator bool const):
* Source/WTF/wtf/FileSystem.cpp:
(WTF::FileSystemImpl::appendFileContentsToFileHandle):
(WTF::FileSystemImpl::MappedFileData::MappedFileData):
(WTF::FileSystemImpl::openAndLockFile):
(WTF::FileSystemImpl::createMappedFileData):
(WTF::FileSystemImpl::mapToFile):
(WTF::FileSystemImpl::readOrMakeSalt):
(WTF::FileSystemImpl::readEntireFile):
(WTF::FileSystemI

--- a/Source/WTF/wtf/CMakeLists.txt
+++ b/Source/WTF/wtf/CMakeLists.txt
@@ -89,6 +89,7 @@ set(WTF_PUBLIC_HEADERS
     FastFloat.h
     FastMalloc.h
     FastTLS.h
+    FileHandle.h
     FilePrintStream.h
     FileSystem.h
     FixedBitVector.h
@@ -528,6 +529,7 @@ set(WTF_SOURCES
     FastBitVector.cpp
     FastFloat.cpp
     FastMalloc.cpp
+    FileHandle.cpp
     FilePrintStream.cpp
     FileSystem.cpp
     FunctionDispatcher.cpp
