Web Inspector: The new ServiceWorkerDebuggableProxy needs to adopt auto inspection rdar://145795990 https://bugs.webkit.org/show_bug.cgi?id=288776
Reviewed by BJ Burg.

This work adds support to automatically inspect or pause the
ServiceWorkerDebuggableProxy, alongside minor refactoring of existing
code around auto-inspection.

The squashed commit includes three patches:

(Patch 1 of 3) Make pausing for automatic inspection a responsibility
of the RemoteInspectionTarget rather than RemoteInspector.

To summarize how automatic inspection generally works:
1. The web content marks its debuggable as inspectable.
2. The debuggable blocks its thread before starting code execution.
3. The auto-launched frontend, after initializing, notifies the backend.
4. The backend unblocks the debuggable to resume its code execution.

As the newly introduced ServiceWorkerDebuggableProxy lives in the UI
process but controls a different thread, during step 2, it's the service
worker thread that would need to be blocked, while the UI process
remains free to handle incoming messages from the remote inspector host.

This patch builds the ground work for supporting pausing in a different
thread by moving the handling of pausing or unpausing into the
debuggable instead of implicitly in RemoteInspector. With this change:
- From the RemoteInspector's perspective, it only needs to manage the
  set of debuggables waiting for a reply of auto-inspection policy.
  Notably, it now tells the debuggable to unpause when auto-inspection
  is rejected, rather than relying on the call to pauseWaitingForAutomaticInspection
  to return and assuming that it was a blocking operation.
- From the RemoteInspectionTarget's perspective, it should decide
  what the pausing behavior is, defaulting to blocking the current
  thread with a busy loop. The pause should then persist until an
  explicit call of unpauseForResolvedAutomaticInspection.

With this patch, it'll be easier to let ServiceWorkerDebuggableProxy
later

--- a/Source/WebKit/WebProcess/Storage/WebSWContextManagerConnection.messages.in
+++ b/Source/WebKit/WebProcess/Storage/WebSWContextManagerConnection.messages.in
@@ -60,8 +60,11 @@ messages -> WebSWContextManagerConnection {
     SetRegistrationUpdateViaCache(WebCore::ServiceWorkerRegistrationIdentifier identifier, enum:uint8_t WebCore::ServiceWorkerUpdateViaCache updateViaCache)
 
 #if ENABLE(REMOTE_INSPECTOR) && PLATFORM(COCOA)
-    ConnectToInspector(WebCore::ServiceWorkerIdentifier serviceWorkerIdentifier)
+    ConnectToInspector(WebCore::ServiceWorkerIdentifier serviceWorkerIdentifier, bool isAutomaticConnection, bool immediatelyPause)
     DisconnectFromInspector(WebCore::ServiceWorkerIdentifier serviceWorkerIdentifier)
     DispatchMessageFromInspector(WebCore::ServiceWorkerIdentifier serviceWorkerIdentifier, String message)
+#if ENABLE(REMOTE_INSPECTOR_SERVICE_WORKER_AUTO_INSPECTION)
+    UnpauseServiceWorkerForRejectedAutomaticInspection(WebCore::ServiceWorkerIdentifier identifier)
+#endif
 #endif
 }
