Generate "FrameTreeSyncData", applying it first to support PaymentSession::canCreateSession() https://bugs.webkit.org/show_bug.cgi?id=290047 rdar://147412463
Reviewed by Alex Christensen.

Under site isolation the frames for a given web page may be spread out over multiple WebContent processes.
In that scenario, each WebContent process has its own notion of the FrameTree for the page.

Before this change, that frame tree consists of very basic nodes with little more than frame names at each node.
But various parts of WebCore and WebKit will require more information about nodes in the FrameTree to do their job locally.

This change builds upon the ProcessSyncData machinery to add FrameTreeSyncData. Each Frame - whether it is Local or Remote -
will maintain its own FrameTreeSyncData. Each Frame starts out with a snapshot of its data from the UIProcess when it was created,
and the UIProcess drives further updates to relevant Frames in each relevant WebProcess when needed.

The proof of concept for this new machinery is moving the concept of PaymentSession::canCreateSession to the UIProcess,
which can then send the bits out to the frame trees in each WebContent process.

As usual, should be no behavior change when site isolation is disabled.

* Source/WebCore/CMakeLists.txt:
* Source/WebCore/DerivedSources-output.xcfilelist:
* Source/WebCore/DerivedSources.make:

* Source/WebCore/Modules/applepay/PaymentSession.cpp:
(WebCore::PaymentSession::isSecureForSession):
(WebCore::PaymentSession::canCreateSession):
(WebCore::isSecure): Deleted.
* Source/WebCore/Modules/applepay/PaymentSession.h:

* Source/WebCore/Scripts/generate-process-sync-data.py:
(SyncedData.__init__):
(generate_process_sync_data_header):
(generate_synched_data_header):
(generate_synched_data_impl):
(generate_process_sync_data_serialiation_in):
(generate_process_sync_data_serialiation_in.WebCore):
(sort_datas_for_sync_data_order):
(main):
(generate_document_synched_data_header): Deleted.
(generate_document_

--- a/Source/WebCore/Scripts/tests/ProcessSyncData.serialization.in
+++ b/Source/WebCore/Scripts/tests/ProcessSyncData.serialization.in
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2024 Apple Inc. All rights reserved.
+# Copyright (C) 2025 Apple Inc. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -33,6 +33,10 @@ header: <WebCore/ProcessSyncData.h>
     bool userDidInteractWithPage;
 };
 
+[RefCounted] class WebCore::FrameTreeSyncData {
+    StringifyThis anotherOne;
+};
+
 enum class WebCore::ProcessSyncDataType : uint8_t {
 #if ENABLE(DOM_AUDIO_SESSION)
     AudioSessionType,
@@ -40,13 +44,14 @@ enum class WebCore::ProcessSyncDataType : uint8_t {
     MainFrameURLChange,
     IsAutofocusProcessed,
     UserDidInteractWithPage,
+    AnotherOne,
 };
  
 #if !ENABLE(DOM_AUDIO_SESSION)
 using WebCore::DOMAudioSessionType = bool;
 #endif
 
-using WebCore::ProcessSyncDataVariant = std::variant<WebCore::DOMAudioSessionType, URL, bool, bool>;
+using WebCore::ProcessSyncDataVariant = std::variant<WebCore::DOMAudioSessionType, URL, bool, bool, StringifyThis>;
 
 struct WebCore::ProcessSyncData {
     WebCore::ProcessSyncDataType type;
