--- a/Source/WebKit/Shared/FrameTreeCreationParameters.serialization.in
+++ b/Source/WebKit/Shared/FrameTreeCreationParameters.serialization.in
@@ -24,5 +24,6 @@ struct WebKit::FrameTreeCreationParameters {
     WebCore::FrameIdentifier frameID;
     std::optional<WebCore::FrameIdentifier> openerFrameID;
     String frameName;
+    Ref<WebCore::FrameTreeSyncData> frameTreeSyncData;
     Vector<WebKit::FrameTreeCreationParameters> children;
 };
