--- a/Source/WebKit/Scripts/webkit/tests/Makefile
+++ b/Source/WebKit/Scripts/webkit/tests/Makefile
@@ -13,6 +13,7 @@ TESTS = \
     TestWithoutAttributes \
     TestWithoutUsingIPCConnection \
     TestWithSemaphore \
+    TestWithSpanOfConst \
     TestWithStream \
     TestWithStreamBatched \
     TestWithStreamBuffer \
