--- a/Source/WebKit/Scripts/webkit/tests/TestWithSpanOfConst.messages.in
+++ b/Source/WebKit/Scripts/webkit/tests/TestWithSpanOfConst.messages.in
@@ -1,4 +1,4 @@
-# Copyright (C) 2023-2024 Apple Inc. All rights reserved.
+# Copyright (C) 2021 Apple Inc. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -20,9 +20,8 @@
 # OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-headers: <WebCore/DisplayListItem.h>
-headers: <WebCore/DisplayListItems.h>
-
-[CustomHeader, AdditionalEncoder=StreamConnectionEncoder] class WebCore::DisplayList::SetState {
-    WebCore::GraphicsContextState state();
-};
+[ExceptionForEnabledBy]
+messages -> TestWithSpanOfConst {
+    TestSpanOfConstFloat(std::span<const float> floats);
+    TestSpanOfConstFloatSegments(std::span<const WebCore::FloatSegment> floatSegments);
+}
