[visionOS] Warning in LinearMediaPlayer.swift: "Private module 'LinearMediaKit' is imported publicly from the public module 'libWebKitSwift'" https://bugs.webkit.org/show_bug.cgi?id=290143 rdar://147543289
Reviewed by Elliott Williams.

Because libWebKitSwift.dylib is installed inside /System/Library/Frameworks/WebKit.framework, the
Xcode build system emits the following warning when Swift sources in WebKitSwift import a private
module, e.g., LinearMediaKit:

    Private module 'LinearMediaKit' is imported publicly from the public module 'libWebKitSwift'

The build system thinks WebKitSwift is a public module based on its INSTALL_PATH, but in reality
WebKitSwift does not contribute its Swift module to Public or Internal SDKs and should be
considered neither a public nor private module.

Silenced this warning by setting SWIFT_LIBRARY_LEVEL to other.

* Source/WebKit/Configurations/WebKitSwift.xcconfig:

Canonical link: https://commits.webkit.org/292491@main

--- a/Source/WebKit/Configurations/WebKitSwift.xcconfig
+++ b/Source/WebKit/Configurations/WebKitSwift.xcconfig
@@ -70,3 +70,5 @@ PRIVATE_HEADERS_FOLDER_PATH_maccatalyst = $(WK_ALTERNATE_FRAMEWORKS_DIR)/$(WEBKI
 
 SWIFT_OPTIMIZATION_LEVEL = -O;
 SWIFT_OPTIMIZATION_LEVEL[config=Debug] = -Onone;
+
+SWIFT_LIBRARY_LEVEL = other;
