Add support for generating a consumer for CSS properties that require custom types for unordered groups https://bugs.webkit.org/show_bug.cgi?id=289983
Reviewed by Antti Koivisto.

- Adds support for custom types on "match one more any order" (||) groups.
- Adds support for custom types on "match all any order" (&&) groups.
- Adds support for the single item optimization for bounded repetition patterns.
- Adds support for the settings flag annotation on "match one" groups.

Removes CSSLineBoxContainValue CSSValue subclass. Uses CSSValueList instead,
with the option set getting built at style building time.

These allow the generation of:
    offset-rotate
    -webkit-line-box-contain
    text-underline-position
    scrollbar-gutter
    position-visibility
    @page size

* Source/WebCore/CMakeLists.txt:
* Source/WebCore/Headers.cmake:
* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
    - Remove no longer needed files. Add StyleLineBoxContain.h

* Source/WebCore/css/CSSProperties.json:
    - Update grammar with annotations.

* Source/WebCore/css/CSSValue.cpp:
* Source/WebCore/css/CSSValue.h:
* Source/WebCore/css/CSSLineBoxContainValue.cpp: Removed.
* Source/WebCore/css/CSSLineBoxContainValue.h: Removed.
* Source/WebCore/css/ComputedStyleExtractor.cpp:
* Source/WebCore/style/values/inline/StyleLineBoxContain.h: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLevelBox.h:
* Source/WebCore/layout/formattingContexts/inline/InlineLevelBoxInlines.h:
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
* Source/WebCore/layout/formattingContexts/inline/InlineQuirks.cpp:
* Source/WebCore/rendering/LegacyRootInlineBox.cpp:
* Source/WebCore/rendering/RenderBlock.cpp:
* Source/WebCore/rendering/style/RenderStyle.h:
* Source/WebCore/rendering/style/RenderStyleInlines.h:
* Source/WebCore/rendering/style/RenderStyleSetters.h:
* Source/WebCor

--- a/Source/WebCore/CMakeLists.txt
+++ b/Source/WebCore/CMakeLists.txt
@@ -200,6 +200,7 @@ set(WebCore_PRIVATE_INCLUDE_DIRECTORIES
     "${WEBCORE_DIR}/style/values/easing"
     "${WEBCORE_DIR}/style/values/filter-effects"
     "${WEBCORE_DIR}/style/values/images"
+    "${WEBCORE_DIR}/style/values/inline"
     "${WEBCORE_DIR}/style/values/motion"
     "${WEBCORE_DIR}/style/values/primitives"
     "${WEBCORE_DIR}/style/values/scroll-snap"
